--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-.accordion { list-style: none; perspective: 900; }
-  .accordion > li { position: relative; overflow: hidden; }
-    .accordion > li:last-of-type { padding-bottom: 0; }
+.accordion { perspective: 900; }
+  .accordion-section { position: relative; overflow: hidden; }
 
-    .accordion li > input[type=checkbox] { position: absolute; cursor: pointer; width: 100%; height: 100%; max-height: 80px; z-index: 10; opacity: 0; }
+    .accordion-section > input[type=checkbox] { position: absolute; cursor: pointer; width: 100%; height: 100%; max-height: 80px; z-index: 10; opacity: 0; }
 
-    .accordion-section { max-height: 9000px; position: relative; overflow: hidden; opacity: 1; transform: translate(0, 0); z-index: 0; transition: all .2s linear; }
-      .accordion li > input[type=checkbox]:checked ~ .accordion-section { max-height: 0; opacity: 0; transform: translate(0, -10%); }
-      .accordion-section .container { padding: 15px 0; }
+    .accordion-content { max-height: 9000px; position: relative; overflow: hidden; opacity: 1; transform: translate(0, 0); z-index: 0; transition: all .2s linear; }
+      .accordion-section > input[type=checkbox]:checked ~ .accordion-content { max-height: 0; opacity: 0; transform: translate(0, -10%); }
